<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity='center'
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pole_tekstowe_na_pytanie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="Quiz wiedzy o literaturze"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prawda_przycisk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/przycisk_prawda" />

        <Button
            android:id="@+id/falsz_przycisk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/przycisk_falsz" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/podpowiedz_przycisk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clue" />

        <Button
            android:id="@+id/następny_przycisk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/przycisk_następny" />
    </LinearLayout>

    <Button
        android:id="@+id/restart_przycisk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/następny_przycisk"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/przycisk_restart"
        android:visibility="gone" />

</LinearLayout>